--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -65,11 +65,12 @@ input, button {
     padding: 10px 20px;
     margin-top: 30px;
     color: #03e9f4;
-    position: relative;
+    position: absolute;
     overflow: hidden;
     text-transform: uppercase;
     letter-spacing: 2px;
-    left: 35%;
+    left: 49%;
+    transform: translateX(-50%);
   }
 
   .btn:hover {
