--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -14,16 +14,22 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    .title {
+      text-align: left;
+      height: 60px;
+      width: calc(100% - 20px);
+      line-height: 60px;
+      padding-left: 20px;
+      @include border-bottom();
+    }
     .headModel {
-      width: 100%;
+      width: calc(100% - 60px);
       height: 60px;
       display: flex;
-      flex-direction: row-reverse;
+      justify-content: space-between;
       align-items: center;
       @include border_bottom();
-      .dropdown {
-        margin-right: 50px;
-      }
+      padding: 0 30px;
       .img_user {
         width: 40px;
         height: 40px;
@@ -34,14 +40,6 @@
       flex: 1;
       display: flex;
       padding: 15px;
-      .title {
-        text-align: left;
-        height: 60px;
-        width: calc(100% - 20px);
-        line-height: 60px;
-        padding-left: 20px;
-        @include border-bottom();
-      }
       .cpuPage_left {
         flex: 3;
         display: flex;
@@ -52,12 +50,33 @@
         box-shadow: 10px 10px #f5f5f5;
         .operation_panel {
           text-align: center;
+          margin-top: 50px;
+          margin-left: 200px;
           .item {
             display: grid;
-            grid-template-columns: 1fr 2fr;
+            grid-template-columns: 1fr 3fr;
             margin-bottom: 20px;
             .ant-select {
               width: 200px;
+            }
+          }
+          .btns {
+            display: flex;
+            justify-content: flex-start;
+            .btn {
+              margin-top: 0;
+              margin-bottom: 0;
+            }
+            .btn_update, .btn_delete {
+              margin-left: 0;
+            }
+          }
+          .backups {
+            display: flex;
+            justify-content: flex-start;
+            .btn {
+              margin-top: 0;
+              margin-bottom: 0;
             }
           }
         }
@@ -76,6 +95,58 @@
         }
         .name {
           text-align: center;
+        }
+      }
+    }
+    .settingPage {
+      height: 100%;
+      margin: 15px;
+      @include border();
+      border-radius: 10px;
+      box-shadow: 10px 10px #f5f5f5;
+      &_content {
+        width: 100%;
+        height: calc(100% - 60px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .page_1 {
+          width: 700px;
+          height: 600px;
+          @include border();
+          border-radius: 10px;
+          box-shadow: 10px 10px #f5f5f5;
+          padding-top: 40px;
+          form {
+            margin: 0 auto;
+          }
+        }
+        .form_btn {
+          display: flex;
+          justify-content: center;
+          flex-direction: row;
+        }
+      }
+    }
+    .modelPage {
+      height: 100%;
+      margin: 15px;
+      @include border();
+      border-radius: 10px;
+      box-shadow: 10px 10px #f5f5f5;
+      &_content {
+        width: 100%;
+        height: calc(100% - 60px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .model_table {
+          width: 700px;
+          height: 600px;
+          @include border();
+          border-radius: 10px;
+          box-shadow: 10px 10px #f5f5f5;
+          padding-top: 40px;
         }
       }
     }
